change service ,and every page something, in terms design  change from the first

--- a/html/services.html
+++ b/html/services.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body id="rb-home-design">
@@ -64,60 +63,64 @@
   </header>
 
  <!--Section-->
-  <div id="carouselExampleCaptions" class="carousel slide">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" arial-label="Slide 5"></button>
+ <section id="rb-services-section">
+    <div class="container rb-container">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" arial-label="Slide 5"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active rb-carousel-item">
+            <img src="../fotot/service1.jpg" class="d-block w-100" alt="foto1">
+            <div class="carousel-caption d-md-block">
+              <h5 class="text-dark font-weight-bold rb-section">Living room</h5>
+              <p class="text-dark rb-section">The living room, a sanctuary within the home, is where comfort meets style. This versatile space serves as a hub for relaxation and socializing, it's design carefully curated for both aesthetics and functionality.</p>
+            </div>
+          </div>
+          <div class="carousel-item rb-carousel-item">
+            <img src="../fotot/service2.jpg " class="d-block w-100 alt" alt="foto2">
+            <div class="carousel-caption d-md-block">
+              <h5 class="text-dark font-weight-bold rb-section">Kitchen</h5>
+              <p class="text-dark rb-section">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
+            </div>
+          </div>
+          <div class="carousel-item rb-carousel-item">
+            <img src="../fotot/service3.jpg" class="d-block w-100" alt="foto3">
+            <div class="carousel-caption d-md-block">
+              <h5 class="text-dark font-weight-bold rb-section">Bathroom</h5>
+              <p class="text-dark rb-section">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
+            </div>
+          </div>
+          <div class="carousel-item rb-carousel-item">
+            <img src="../fotot/service4.jpg" class="d-block w-100" alt="foto4">
+            <div class="carousel-caption d-m-block">
+              <h5 class="text-dark font-weight-bold rb-section">Bedroom</h5>
+              <p class="text-dark rb-section">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
+            </div>
+          </div>
+          <div class="carousel-item rb-carousel-item">
+            <img src="../fotot/service5.jpg" class="d-block w-100" alt="foto5">
+            <div class="carousel-caption d-m-block">
+              <h5 class="text-dark font-weight-bold rb-section">Bedroom for children</h5>
+              <p class="text-dark rb-section">A children's bedroom is a magical realm where imagination takes flight. Designed to inspire creativity and nurture dreams, these spaces are adorned with playful colors, whimscical decorations, and cozy furnishings.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active rb-carousel-item">
-        <img src="../fotot/service1.jpg" class="d-block w-100" alt="foto1">
-        <div class="carousel-caption d-md-block">
-          <h5 class="text-dark font-weight-bold rb-section">Living room</h5>
-          <p class="text-dark rb-section">The living room, a sanctuary within the home, is where comfort meets style. This versatile space serves as a hub for relaxation and socializing, it's design carefully curated for both aesthetics and functionality.</p>
-        </div>
-      </div>
-      <div class="carousel-item rb-carousel-item">
-        <img src="../fotot/service2.jpg " class="d-block w-100 alt" alt="foto2">
-        <div class="carousel-caption d-md-block">
-          <h5 class="text-dark font-weight-bold rb-section">Kitchen</h5>
-          <p class="text-dark rb-section">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
-        </div>
-      </div>
-      <div class="carousel-item rb-carousel-item">
-        <img src="../fotot/service3.jpg" class="d-block w-100" alt="foto3">
-        <div class="carousel-caption d-md-block">
-          <h5 class="text-dark font-weight-bold rb-section">Bathroom</h5>
-          <p class="text-dark rb-section">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
-        </div>
-      </div>
-      <div class="carousel-item rb-carousel-item">
-        <img src="../fotot/service4.jpg" class="d-block w-100" alt="foto4">
-        <div class="carousel-caption d-m-block">
-          <h5 class="text-dark font-weight-bold rb-section">Bedroom</h5>
-          <p class="text-dark rb-section">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
-        </div>
-      </div>
-      <div class="carousel-item rb-carousel-item">
-        <img src="../fotot/service5.jpg" class="d-block w-100" alt="foto5">
-        <div class="carousel-caption d-m-block">
-          <h5 class="text-dark font-weight-bold rb-section">Bedroom for children</h5>
-          <p class="text-dark rb-section">A children's bedroom is a magical realm where imagination takes flight. Designed to inspire creativity and nurture dreams, these spaces are adorned with playful colors, whimscical decorations, and cozy furnishings.</p>
-        </div>
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -166,13 +169,15 @@
               <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
-      </div>
+        </div>
 
-      <hr class="mb-6">
-      <div class="row align-items-center">
-        <div class="col-xs-12">
-          <p>&copy; Copyright 2024 All reserved by
-          <a href="#"class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a></p>
+       <hr class="mb-6">
+       <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2024 All reserved by
+              <a href="#"class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
+            </p>
+          </div>
         </div>
       </div>
     </footer>
