--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark dropdown-toggle" href="./index.html" data-bs-toggle="dropdown" aria-expanded="false" ><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark dropdown-toggle" href="./index.html" data-bs-toggle="dropdown" aria-expanded="false" role="button" ><i class="fa-solid fa-house"></i> Home</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
                 </ul>
               </li>
+              <div class="indicators" id="indicators">Home</div>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="./html/about.html" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa-solid fa-user"></i> About</a>
               </li>
@@ -71,7 +72,7 @@
           <div class="col-md-6 col-xs-12">
             <div class="rb-group">
               <h1><strong>Home Design-RB'</strong></h1>
-              <button type="button" class="btn btn-dark rb-btn"><a href="../Home-Design-RB/index.html">Click <i class="fa-solid fa-check"></i></a></button>
+              <button type="button" class="btn btn-dark rb-btn"><a href="./index.html" target="_blank">Click <i class="fa-solid fa-check"></i></a></button>
             </div>
           </div>
           <div class="col-md-6 col-xs-12">
