--- a/html/contact.html
+++ b/html/contact.html
@@ -6,6 +6,7 @@
    <title>Contact</title>
    <link rel="stylesheet" href="../css/contact.css">
    <link rel="icon" href="../fotot/contact-icon.jpg">
+   <script src="../js/contact.js"defer></script>
    <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
    <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -70,11 +71,18 @@
                   <div class="rb-right">
                     <h2>Contact us</h2>
                     <form action="#">
-                      <input type="text" class="rb-field" placeholder="Your name">
-                      <input type="email" class="rb-field"  placeholder="Your email">
-                      <input type="number" class="rb-field" placeholder="Your phone">
-                      <textarea class="rb-field" placeholder="Message"></textarea>
-                      <button class="rb-btn">Send</button>
+                       <input type="text" class="rb-field" placeholder="Your firstname">
+                       <input type="text" class="rb-field" placeholder="Your lastname">
+                       <input type="email" class="rb-field"  placeholder="Your email">
+                       <input type="number" class="rb-field" placeholder="Your phone">
+                       <select class="form-select rb-field" aria-label="Default select example">
+                          <option value="1">Year</option>
+                          <option value="2">2015</option>
+                          <option value="3">2020</option>
+                          <option value="4">2024</option>
+                        </select>
+                       <textarea class="rb-field" placeholder="Message"></textarea>
+                       <button class="rb-btn">Send</button>
                      </form>
                   </div>
                </div>
