--- a/html/terms.html
+++ b/html/terms.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="../css/terms.css">
   <link rel="icon" href="../fotot/terms-icon.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
 </head>
@@ -63,12 +62,12 @@
   </header>
   
   <!--Section-->
-  <section id="rb-section">
+  <section id="rb-terms-section">
     <div class="container">
       <div class="rb-main">
         <div class="rb-group">
           <div class="rb-section-text">
-            <h1>Terms</h1>
+            <h1><i class="fa-solid fa-book rb-font"></i> Terms</h1>
           </div>
           <div class="rb-content">
             <div class="rb-box">
@@ -78,7 +77,7 @@
             <div class="rb-box">
               <h3>Kitchen</h3>
               <p>Designing a functional and suitable kitchen, including sufficient space for food preparation and storage for kitchen appliances.</p>
-            </div>
+            </div> 
             <div class="rb-box">
               <h3>Bedroom</h3>
               <p>An ideal bedroom is a serene retreat with a comfortable bed, soft lighting, and personalized decor. Keep it clutter-free, and calming colors, and consider a cozy seating nook for relaxation.</p>
@@ -88,9 +87,10 @@
               <p>A well-equipped bathroom functionality with comfort. Quality fixtures, smart storage, and something aesthetics create a space that is both efficient and inviting.</p>
             </div>
           </div>
+         
           <hr>
           <div class="rb-section-text">
-            <h1>Arrangements</h1>
+            <h1><i class="fa-solid fa-quote-right rb-font"></i> Arrangements</h1>
           </div>
             <div class="rb-content">
               <div class="rb-box">
