--- a/html/video.html
+++ b/html/video.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body id="rb-home-design">
@@ -63,11 +62,12 @@
       </div>
     </nav>
   </header>
+  
   <!--Section-->
-  <section>
+  <section id="rb-video-section">
     <div class="rb-btn">
       <div class="rb-play"></div>
-        <p> Click </p>
+        <p>Go to the video</p>
       </div>
       <div class="rb-video">
         <video src="../fotot/video.mp4"></video>
