--- a/html/designers.html
+++ b/html/designers.html
@@ -5,11 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Designers</title>
   <link rel="stylesheet" href="../css/designers.css">
-  <link rel="icon" href="../fotot/table-icon.jpg">
+  <link rel="icon" href="../fotot/designers-icon.jpg">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body id="rb-home-design">
@@ -18,7 +17,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg" class="rb-navbar-icon"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,32 +29,38 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark dropdown-toggle" href="../index.html" data-bs-toggle="dropdown" ><i class="fa-solid fa-house"></i> Home</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
-                </ul>
+                <div class="row rb-nav-link">
+                  <div class="col">
+                    <a href="../index.html" class="rb-index-menu"><i class="fa-solid fa-house"></i> Home</a>
+                  </div>
+                  <div class="col">
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-home-menu" data-bs-toggle="dropdown"></a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
+                    </ul>
+                  </div>  
+                </div>
+              </li>
+              <li class="rb-nav-item"> 
+                <div class="row rb-nav-link">
+                  <div class="col">
+                    <a href="../html/about.html" class="rb-about"><i class="fa-solid fa-user"></i> About </a>
+                  </div>
+                  <div class="col">
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-about-menu" data-bs-toggle="dropdown"></a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
+                      <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
+                      <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                    </ul>
+                  </div>
+                </div>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark dropdown-toggle" href="../html/about.html" data-bs-toggle="dropdown" ><i class="fa-solid fa-user"></i> About</a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History</a></li>
-                  <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
-                  <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
-                </ul>
+                <a class="rb-nav-link nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
               </li>
               <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
-              </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark dropdown-toggle" href="#" data-bs-toggle="dropdown">  Treeview menu  </a>
-                <ul class="dropdown-menu">
-                  <li> <a class="dropdown-item" href="#"> Dropdown item 1 </a></li>
-                  <li> <a class="dropdown-item" href="#"> Dropdown item 2 &raquo; </a></li>
-                  <li> <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>                </li>
-                </ul>
+                <a class="rb-nav-link nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
               </li> 
               <li class="rb-nav-item"> 
                 <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-regular fa-address-book"></i> Contact</a></li>
@@ -152,15 +157,15 @@
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-              <p>
-                <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-              </p>
-              <p>
-                <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-              </p>
-              <p>
-                <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-              </p>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+            </p>
+            <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+            </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
