--- a/html/history.html
+++ b/html/history.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/history.css">
   <script src="../js/history.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-  <script src="../bootstrap/js/bootstrap.js" defer></script>
+  <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg" class="rb-navbar-icon"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -30,19 +30,38 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark" aria-current="page" href="../index.html"><i class="fa-solid fa-house"></i> Home</a>
+                <div class="row rb-nav-link">
+                  <div class="col">
+                    <a href="../index.html" class="rb-index-menu"><i class="fa-solid fa-house"></i> Home</a>
+                  </div>
+                  <div class="col">
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-home-menu" data-bs-toggle="dropdown"></a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
+                    </ul>
+                  </div>  
+                </div>
               </li>
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/about.html"><i class="fa-solid fa-user"></i> About</a>
+              <li class="rb-nav-item"> 
+                <div class="row rb-nav-link">
+                  <div class="col">
+                    <a href="../html/about.html" class="rb-about"><i class="fa-solid fa-user"></i> About </a>
+                  </div>
+                  <div class="col">
+                    <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-about-menu" data-bs-toggle="dropdown"></a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="../html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
+                      <li><a class="dropdown-item" href="../html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
+                      <li><a class="dropdown-item" href="../html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
+                    </ul>
+                  </div>
+                </div>
               </li>
               <li class="rb-nav-item">
                <a class="nav-link text-dark" href="../html/services.html"><i class="fa-solid fa-paint-roller"></i> Services</a></li>
               </li>
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/terms.html"><i class="fa-regular fa-clipboard"></i> Terms</a></li>
-              </li> 
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
               </li> 
               <li class="rb-nav-item">
                 <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
@@ -88,7 +107,7 @@
         <img src="../fotot/history3.jpg" alt="foto3">
         <div class="rb-card-content">
           <h3>The houses in '2023'</h3>
-          <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs. The design of the house marks changes in 2023, while innovations are announced for 2024.</p>
+          <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and better suited to everyday needs. The design of the house marks changes in 2023, while innovations are announced for 2024.</p>
           <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
         </div>
       </div>
@@ -128,7 +147,7 @@
       <div class="container text-center">
         <div class="row text-center">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
