--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="./css/index.css">
   <link rel="icon" href="./fotot/index-icon.jpg">
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-  <script src="./js/index.js" defer></script>
   <script src="./bootstrap/js/bootstrap.bundle.min.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
@@ -42,7 +41,6 @@
                   </div>  
                 </div>
               </li>
-
               <li class="rb-nav-item"> 
                 <div class="row rb-nav-link">
                   <div class="col">
@@ -52,7 +50,7 @@
                     <a href="#" class="nav-link text-dark dropdown-toggle d-flex align-items-center rb-about-menu" data-bs-toggle="dropdown"></a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="./html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History </a></li>
-                      <li><a class="dropdown-item" href="./html/designers.html"><i class="fa-solid fa-table"></i> Table</a></li>
+                      <li><a class="dropdown-item" href="./html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
                       <li><a class="dropdown-item" href="./html/experience.html"><i class="fa-solid fa-lightbulb"></i> Experience</a></li>
                     </ul>
                   </div>
